--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ python:
 - '3.4'
 - '3.5'
 - '3.6'
+install:
+- echo "THERE ARE NOTHING TO INSTALL."
 deploy:
   provider: pypi
   distributions: bdist_wheel
