--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ script:
 deploy:
   provider: pypi
   distributions: bdist_wheel
-  user:davydany: 
+  user: davydany
   on:
     repo: davydany/caduceus
     branch: master
